@@ -1,6 +1,5 @@
 package com.example.demo.utils;
 
-
 import java.util.Collection;
 import java.util.List;
 import java.util.stream.Collectors;
@@ -31,7 +30,7 @@ public class MapJSUtil {
         String pointTemplate = "[%s, %s]";
         List<String> formattedPoints = points.stream()
                 .map(p -> String.format(strTemplate, p.latitude, p.longitude))
-                .collect(Collectors.toList());
+                .toList();
         String pointsTemplate = "[%s]";
         String pointsJs = String.format(
                 pointsTemplate,
@@ -90,12 +89,8 @@ public class MapJSUtil {
         return withVariableName;
     }
 
-    private static String coordinatesArrayScript(Collection<Coordinate> coordinates) {
-        final String scriptTemplate = """
-                [
-                    %s
-                ]
-                """;
+    public static String coordinatesArrayScript(Collection<Coordinate> coordinates) {
+        final String scriptTemplate = "[%s]";
         final String coordinateTemplate = "[%s, %s]";
         final String coordinatesStr = coordinates.stream()
                 .map(coordinate -> String.format(coordinateTemplate, coordinate.latitude, coordinate.longitude))
@@ -104,7 +99,24 @@ public class MapJSUtil {
     }
 
     public static class Coordinate {
-        public double latitude;
-        public double longitude;
+        public final double latitude;
+        public final double longitude;
+
+        public Coordinate() {
+            latitude = 0.0;
+            longitude = 0.0;
+        }
+        public Coordinate(double latitude, double longitude) {
+            this.latitude = latitude;
+            this.longitude = longitude;
+        }
+
+        /**
+         * @return
+         */
+        @Override
+        public String toString() {
+            return String.format("[lat = %s, lon = %s]", latitude, longitude);
+        }
     }
 }
